fix: active bg on mobile-nav-btn when in light mode not enough contrast

--- a/css/main.css
+++ b/css/main.css
@@ -251,7 +251,7 @@
   }
 
   .link--nav-active {
-    @apply text-primary-one border-primary-one;
+    @apply text-primary-two border-primary-one;
   }
 
   .link--nav-mobile {
